kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: 1st-demo-unique-repo
  name: 1st-demo-unique-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 1st-demo-unique-repo
  template:
    metadata:
      labels:
        app: 1st-demo-unique-repo
    spec:
      containers:
        - image: 1st-demo-unique-repo
          name: 1st-demo-unique-repo
          ports:
            - name: http
              containerPort: 8080
