kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: 1st-demo-unique-repo
  name: 1st-demo-unique-repo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: 1st-demo-unique-repo
  type: ClusterIP
